--- a/_todo/clas_supervise/clas_super_biblio.tex
+++ b/_todo/clas_supervise/clas_super_biblio.tex
@@ -1,12 +1,12 @@
-% insère une entrée dans la bibliographie
-%		1 - identifiant
-%		2 - année
-%		3 - auteurs
-%		4 - titre
-%		5 - revue
-%		6 - volume
-%		7 - page début
-%		8 - page fin
+% insï¿½re une entrï¿½e dans la bibliographie
+%        1 - identifiant
+%        2 - annï¿½e
+%        3 - auteurs
+%        4 - titre
+%        5 - revue
+%        6 - volume
+%        7 - page dï¿½but
+%        8 - page fin
 
 \bibitemstyle{Chang1974} {1974} {C. L. Chang}
 {Finding prototypes for nearest neighbor classifiers}
