--- a/_todo/classification/classification_bibliographie.tex
+++ b/_todo/classification/classification_bibliographie.tex
@@ -1,12 +1,12 @@
-% insère une entrée dans la bibliographie
-%		1 - identifiant
-%		2 - année
-%		3 - auteurs
-%		4 - titre
-%		5 - revue
-%		6 - volume
-%		7 - page début
-%		8 - page fin
+% insï¿½re une entrï¿½e dans la bibliographie
+%        1 - identifiant
+%        2 - annï¿½e
+%        3 - auteurs
+%        4 - titre
+%        5 - revue
+%        6 - volume
+%        7 - page dï¿½but
+%        8 - page fin
 
 \bibitemstyle{Balakrishnan1996} {1996} {P. V. Sundar Balakrishnan, Martha Cooper, Varghese S. Jacob, Phillip A. Lewis}
 {Comparative performance of the FSCL neural net and K-means algorithm for market segmentation}
@@ -38,7 +38,7 @@
 
 \bibitemstyle{Celeux1995}{1995} {Gilles Celeux, Didier Chauveau, Jean Diebolt}
 {On stochastic version of the EM algorithm}
-{Rapport de recherche de l'INRIA}{n°2514}{0}{}
+{Rapport de recherche de l'INRIA}{nï¿½2514}{0}{}
 
 \bibitemstyle{Davies1979} {1979} {D. L. Davies, D. W. Bouldin}
 {A cluster Separation Measure}
@@ -60,7 +60,7 @@
 {Estimation of the number of clusters and influence zones}
 {Pattern Recognition Letters}{22}{1557}{1568}
 
-\bibitemstyle{Hoti2004} {2004} {Fabian Hoti, Lasse Holmström}
+\bibitemstyle{Hoti2004} {2004} {Fabian Hoti, Lasse Holmstrï¿½m}
 {A semiparametric density estimation approach to pattern classification}
 {Pattern Recognition}{77}{409}{419}
 
@@ -93,7 +93,7 @@
 {IEEE Trans. Neural Networks}{4(4)}{558}{569}
 
 \bibitemstyle{Saporta1990} {1990} {Gilbert Saporta}
-{Probabilités, analyse des données et statistique}
+{Probabilitï¿½s, analyse des donnï¿½es et statistique}
 {Editions Technip}{}{0}{}
 
 \bibitemstyle{Silverman1986} {1986} {B. W.  Silverman}
