--- a/_todo/edit_distance/edit_bibliographie.tex
+++ b/_todo/edit_distance/edit_bibliographie.tex
@@ -1,12 +1,12 @@
-% insère une entrée dans la bibliographie
-%		1 - identifiant
-%		2 - année
-%		3 - auteurs
-%		4 - titre
-%		5 - revue
-%		6 - volume
-%		7 - page début
-%		8 - page fin
+% insï¿½re une entrï¿½e dans la bibliographie
+%        1 - identifiant
+%        2 - annï¿½e
+%        3 - auteurs
+%        4 - titre
+%        5 - revue
+%        6 - volume
+%        7 - page dï¿½but
+%        8 - page fin
 
 \bibitemstyle{Damerau1964}{1964} {F. J. Damerau}
 {A technique for computer detection and correction of spelling errors}
