--- a/_todo/hmm/hmm_bibliographie.tex
+++ b/_todo/hmm/hmm_bibliographie.tex
@@ -1,12 +1,12 @@
-% insère une entrée dans la bibliographie
-%		1 - identifiant
-%		2 - année
-%		3 - auteurs
-%		4 - titre
-%		5 - revue
-%		6 - volume
-%		7 - page début
-%		8 - page fin
+% insï¿½re une entrï¿½e dans la bibliographie
+%        1 - identifiant
+%        2 - annï¿½e
+%        3 - auteurs
+%        4 - titre
+%        5 - revue
+%        6 - volume
+%        7 - page dï¿½but
+%        8 - page fin
 
 \bibitemstyle{Baum1968} {1968} { L. E. Baum, G. R. Sell}
 {Growth transformation for functions on manifolds}
@@ -21,8 +21,8 @@
 {Pattern Recognition Letters}{24}{1395}{1407}
 
 \bibitemstyle{Bottou1991} {1991} {L. Bottou}
-{Une approche théorique de l'apprentissage connexionniste, Application à la reconnaissance de la parole}
-{Thèse de l'Université de Paris Sud, Centre d'Orsay}{}{0}{}
+{Une approche thï¿½orique de l'apprentissage connexionniste, Application ï¿½ la reconnaissance de la parole}
+{Thï¿½se de l'Universitï¿½ de Paris Sud, Centre d'Orsay}{}{0}{}
 
 \bibitemstyle{Celeux1985}{1985}{G. Celeux, J. Diebolt}
 {The SEM algorithm: a probabilistic teacher algorithm derived from the EM algorithm for the mixture problem}
@@ -30,7 +30,7 @@
 
 \bibitemstyle{Celeux1995}{1995}{Gilles Celeux, Didier Chauveau, Jean Diebolt}
 {On stochastic version of the EM algorithm}
-{Rapport de recherche de l'INRIA}{n°2514}{0}{}
+{Rapport de recherche de l'INRIA}{nï¿½2514}{0}{}
 
 \bibitemstyle{Chen1994}{1994}{Mou-Yen Chen, Amlan Kundu, Jian Zhou}
 {Off-line Handwritten Word Recognition Using a Hidden Markov Model Type Stochastic Network}
