--- a/_todo/image/image_article.tex
+++ b/_todo/image/image_article.tex
@@ -1,12 +1,12 @@
-% insère une entrée dans la bibliographie
-%		1 - identifiant
-%		2 - année
-%		3 - auteurs
-%		4 - titre
-%		5 - revue
-%		6 - volume
-%		7 - page début
-%		8 - page fin
+% insï¿½re une entrï¿½e dans la bibliographie
+%        1 - identifiant
+%        2 - annï¿½e
+%        3 - auteurs
+%        4 - titre
+%        5 - revue
+%        6 - volume
+%        7 - page dï¿½but
+%        8 - page fin
 
  
 
@@ -16,12 +16,12 @@
 {Pattern Recognition}{29}{1161}{1177}
 
 \bibitemstyle{Augustin2001}{2001}{E. Augustin}
-{Reconnaissance de mots manuscrits par systèmes hybrides réseaux de neurones et modèles de Markov cachés}
-{Thèse de l'Université Paris V}{}{0}{}
+{Reconnaissance de mots manuscrits par systï¿½mes hybrides rï¿½seaux de neurones et modï¿½les de Markov cachï¿½s}
+{Thï¿½se de l'Universitï¿½ Paris V}{}{0}{}
 
 \bibitemstyle{Baret1991}{1991}{O. Baret}
-{Régularités, singularités de représentations et leur complémentarité~: application à la reconnaissance de l'écriture manuscrite non contrainte}
-{Thèse de l'Université Paris VI}{}{0}{}
+{Rï¿½gularitï¿½s, singularitï¿½s de reprï¿½sentations et leur complï¿½mentaritï¿½~: application ï¿½ la reconnaissance de l'ï¿½criture manuscrite non contrainte}
+{Thï¿½se de l'Universitï¿½ Paris VI}{}{0}{}
 
 \bibitemstyle{Bloomberg1995}{1995} {D. S. Blommberg, G. E. Kopec, L. Dasari}
 {Measuring document image skew and orientation}
@@ -47,19 +47,19 @@
 {A robust algorithm for image principal curve detection}
 {Pattern Recognition Letters}{25}{1303}{1313}
 
-\bibitemstyle{Côté1997}{1997}{M. Côté, M. Cheriet, E. Lecolinet, C. Y. Suen}
-{Détection des Lignes de Référence de Mots Cursifs à l'aide de l'entropie}
-{Les techniques de l'I.A. appliquées aux technologies de l'information, Richard Lepage and Rita Noumeir (Eds.), Cahiers Scientifiques de l'ACFAS}{90}{184}{193}
+\bibitemstyle{Cï¿½tï¿½1997}{1997}{M. Cï¿½tï¿½, M. Cheriet, E. Lecolinet, C. Y. Suen}
+{Dï¿½tection des Lignes de Rï¿½fï¿½rence de Mots Cursifs ï¿½ l'aide de l'entropie}
+{Les techniques de l'I.A. appliquï¿½es aux technologies de l'information, Richard Lepage and Rita Noumeir (Eds.), Cahiers Scientifiques de l'ACFAS}{90}{184}{193}
 
-\bibitemstyle{Desolneux2000} {2000} {Agnès Desolneux, Lionel Moisan, Jean-Michel Morel}
+\bibitemstyle{Desolneux2000} {2000} {Agnï¿½s Desolneux, Lionel Moisan, Jean-Michel Morel}
 {Meaningful Alignments}
 {International Journal of Computer Vision}{40(1)}{7}{23}
 
-\bibitemstyle{Desolneux2002} {2002} {Agnès Desolneux, Lionel Moisan, Jean-Michel Morel}
+\bibitemstyle{Desolneux2002} {2002} {Agnï¿½s Desolneux, Lionel Moisan, Jean-Michel Morel}
 {Gestalt theory and Computer Vision}
-{Publication du Centre de Mathématiques et de Leurs Applications, disponible à l'adresse http://www.cmla.ens-cachan.fr/Cmla/Publications/}{Nº 2002-06}{0}{}
+{Publication du Centre de Mathï¿½matiques et de Leurs Applications, disponible ï¿½ l'adresse http://www.cmla.ens-cachan.fr/Cmla/Publications/}{Nï¿½ 2002-06}{0}{}
 
-\bibitemstyle{Desolneux2003} {2003} {Agnès Desolneux, Lionel Moisan, Jean-Michel Morel}
+\bibitemstyle{Desolneux2003} {2003} {Agnï¿½s Desolneux, Lionel Moisan, Jean-Michel Morel}
 {A Grouping Principle and Four Applications}
 {IEEE Transactions on Pattern Analysis and Machine Intelligence}{25(4)}{508}{513}
 
@@ -67,9 +67,9 @@
 {Hierarchical ordering of sequential processes}
 {Acta Informatica}{1,2}{115}{138}
 
-\bibitemstyle{Dupré2000}{2000} {X.  Dupré}
-{Reconnaissance de mots-clé dans un document manuscrit}
-{Mémoire de DEA de l'Université Paris VI}{}{0}{}
+\bibitemstyle{Duprï¿½2000}{2000} {X.  Duprï¿½}
+{Reconnaissance de mots-clï¿½ dans un document manuscrit}
+{Mï¿½moire de DEA de l'Universitï¿½ Paris VI}{}{0}{}
 
 \bibitemstyle{Elnagar2003}{2003} {Ashraf Elnagar, Reda Alhajj}
 {Segmentation of connected handwritten numeral strings}
@@ -135,7 +135,7 @@
 {Machine-printed and hand-written text lines identification}
 {Pattern Recognition Letters}{22}{431}{441}
 
-\bibitemstyle{Pal2003}{2003}{U. Pal, A. Belaïd, Ch. Choisy}
+\bibitemstyle{Pal2003}{2003}{U. Pal, A. Belaï¿½d, Ch. Choisy}
 {Touching numeral segmentation using water reservoir concept}
 {Pattern Recognition Letters}{24}{261}{272}
 
