--- a/_todo/ngrams/ngrams_biblio.tex
+++ b/_todo/ngrams/ngrams_biblio.tex
@@ -1,15 +1,15 @@
-% insère une entrée dans la bibliographie
-%		1 - identifiant
-%		2 - année
-%		3 - auteurs
-%		4 - titre
-%		5 - revue
-%		6 - volume
-%		7 - page début
-%		8 - page fin
+% insï¿½re une entrï¿½e dans la bibliographie
+%        1 - identifiant
+%        2 - annï¿½e
+%        3 - auteurs
+%        4 - titre
+%        5 - revue
+%        6 - volume
+%        7 - page dï¿½but
+%        8 - page fin
 
 
-\bibitemstyle{Béchet2004}{2004}{F. Béchet, R. De Mori, D. Janiszek}
+\bibitemstyle{Bï¿½chet2004}{2004}{F. Bï¿½chet, R. De Mori, D. Janiszek}
 {Data augmentation and language model adaptation using singular value decomposition}
 {Pattern Recognition Letters}{24}{15}{19}
 
@@ -27,5 +27,5 @@
 
 \bibitemstyle{Yamamoto2003} {2003} {Hirofumi Yamamoto, Shuntara Isogai, Yoshinori Sagisaka}
 {Multi-class composite N-gram language model}
-{Speech Communication}{}{0}{à paraître}
+{Speech Communication}{}{0}{ï¿½ paraï¿½tre}
 
