--- a/_todo/space_metric/space_metric_biblio.tex
+++ b/_todo/space_metric/space_metric_biblio.tex
@@ -1,12 +1,12 @@
-% insère une entrée dans la bibliographie
-%		1 - identifiant
-%		2 - année
-%		3 - auteurs
-%		4 - titre
-%		5 - revue
-%		6 - volume
-%		7 - page début
-%		8 - page fin
+% insï¿½re une entrï¿½e dans la bibliographie
+%        1 - identifiant
+%        2 - annï¿½e
+%        3 - auteurs
+%        4 - titre
+%        5 - revue
+%        6 - volume
+%        7 - page dï¿½but
+%        8 - page fin
 
 \bibitemstyle{Apostolico1985}{1985} {A.  Apostolico}
 {The Myriad virtues of subword trees}
@@ -36,7 +36,7 @@
 {PCA-based branch and bound search algorithms for computing K nearest neighbours}
 {Pattern Recognition Letters}{24}{1437}{1451}
 
-\bibitemstyle{Dupré2003}{2003}{X. Dupré}
+\bibitemstyle{Duprï¿½2003}{2003}{X. Duprï¿½}
 {Optimization of cursive words recognition and nearest neighbors search in metric spaces}
 {International Conference on Image and Signal Processing (ICISP), Agadir, Morroco}{}{608}{615}
 
