--- a/_todo/squelette/squelette_article.tex
+++ b/_todo/squelette/squelette_article.tex
@@ -1,12 +1,12 @@
-% insère une entrée dans la bibliographie
-%		1 - identifiant
-%		2 - année
-%		3 - auteurs
-%		4 - titre
-%		5 - revue
-%		6 - volume
-%		7 - page début
-%		8 - page fin
+% insï¿½re une entrï¿½e dans la bibliographie
+%        1 - identifiant
+%        2 - annï¿½e
+%        3 - auteurs
+%        4 - titre
+%        5 - revue
+%        6 - volume
+%        7 - page dï¿½but
+%        8 - page fin
 
 
 \bibitemstyle{Abuhaiba1996}{1996}{I. S. I. Abuhaiba, M. J. J. Holt, S. Datta}
@@ -18,8 +18,8 @@
 {IEEE Transactions on Pattern Analysis and Machine Intelligence}{7(4)}{463}{474}
 
 \bibitemstyle{Attali1995}{1995}{D.  Attali}
-{Squelette et Graphes de Voronoï 2D et 3D}
-{Thèse de l'Universtié Joseph Fourier, Grenoble I}{}{0}{}
+{Squelette et Graphes de Voronoï¿½ 2D et 3D}
+{Thï¿½se de l'Universtiï¿½ Joseph Fourier, Grenoble I}{}{0}{}
 
 \bibitemstyle{Blum1967} {1967} {Harry Blum}
 {A transformation for extracting new descriptors of shape}
@@ -30,7 +30,7 @@
 {Journal of Theoretical Biology}{38}{205}{287}
 
 \bibitemstyle{Breton2002}{2002}{R.  Breton, E. Andres}
-{Vectorisation d'une courbe discrète standard 2D}
+{Vectorisation d'une courbe discrï¿½te standard 2D}
 {AFIG}{}{0}{}
 
 \bibitemstyle{Chakravarthy2003}{2003} { V. Srinivasa Chakravarthy, Bhaskar Kompella }
@@ -42,7 +42,7 @@
 {Pattern Recognition}{36}{721}{729}
 
 \bibitemstyle{Cloppet2000}{2000}{F. Cloppet, J. M. Oliva, G. Stamon}
-{Angular Bisector Network, a Simplified Generalized Voronoï Diagram: Application to Processing Complex Intersections in Biomedical Images}
+{Angular Bisector Network, a Simplified Generalized Voronoï¿½ Diagram: Application to Processing Complex Intersections in Biomedical Images}
 {IEEE Transactions on Pattern Analysis and Machine Intelligence}{22(1)}{120}{128}
 
 \bibitemstyle{Datta1997}{1997} {Amitava Datta, S.K. Parui }
@@ -65,7 +65,7 @@
 {One-pass Parallel Thinning Analysis, Properties, and Quantitative evaluation}
 {IEEE Transactions on Pattern Analysis and Machine Intelligence}{14(11)}{869}{885}
 
-\bibitemstyle{Kalm\'ar1999}{1999}{Zsolt Kalm\'ar, Zsolt Marczell, Csaba Szepesv\'ari, Andr\'as Lörincz}
+\bibitemstyle{Kalm\'ar1999}{1999}{Zsolt Kalm\'ar, Zsolt Marczell, Csaba Szepesv\'ari, Andr\'as Lï¿½rincz}
 {Parallel and robust skeletonization built on self-organizing elements}
 {Neural Networks}{12}{163}{173}
 
@@ -87,7 +87,7 @@
 
 \bibitemstyle{Marthon1979}{1979} {P. Marthon, A. Bruel, G. Biguet}
 {Squelettisation par calcul d'une fonction discriminante sur un voisinage de 8 points}
-{Actes du second congrès AFCET~: Reconnaissance des Formes et Intelligence Articielles}{107}{114}
+{Actes du second congrï¿½s AFCET~: Reconnaissance des Formes et Intelligence Articielles}{107}{114}
 
 \bibitemstyle{Ogniewicz1992}{1992} {R. L. Ogniewicz}
 {Discrete Voronoi Skeletons}
@@ -97,9 +97,9 @@
 {Hierarchic Voronoi skeletons}
 {Pattern Recognition}{28}{343}{359}
 
-\bibitemstyle{Reveillès1991}{1991}{J. P. Reveillès}
-{Géométrie discrète, calculs en nombre entiers et algorithmique}
-{Thèse, Université Louis Pasteur, Strasbourg}{}{0}{}
+\bibitemstyle{Reveillï¿½s1991}{1991}{J. P. Reveillï¿½s}
+{Gï¿½omï¿½trie discrï¿½te, calculs en nombre entiers et algorithmique}
+{Thï¿½se, Universitï¿½ Louis Pasteur, Strasbourg}{}{0}{}
 
 \bibitemstyle{Rosenfeld1986}{1986} {A.  Rosenfeld}
 {Axial representations of shape}
@@ -119,11 +119,11 @@
 
 \bibitemstyle{Thiel1994}{1994}{E.  Thiel}
 {Les distances de chanfrein en analyse d'images~: fondements et applications}
-{Thèse, Université Joseph Fourier, Grenoble I}{}{0}{}
+{Thï¿½se, Universitï¿½ Joseph Fourier, Grenoble I}{}{0}{}
 
 \bibitemstyle{Vittone1999}{1999} {J. Vittone}
-{Caractérisation et reconnaissance de droites et de plans en géométrie discrète}
-{Thèse, Université Joseph Fourier, Grenoble I}{}{0}{}
+{Caractï¿½risation et reconnaissance de droites et de plans en gï¿½omï¿½trie discrï¿½te}
+{Thï¿½se, Universitï¿½ Joseph Fourier, Grenoble I}{}{0}{}
 
 \bibitemstyle{Yeung1996}{1996} {Daniel S. Yeung, H. S. Fong}
 {A fuzzy substroke extractor for handwritten chinese characters}
