--- a/_doc/notebooks/ml/regression_no_inversion.ipynb
+++ b/_doc/notebooks/ml/regression_no_inversion.ipynb
@@ -4,9 +4,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# R\u00e9gression sans inversion\n",
+        "# Régression sans inversion\n",
         "\n",
-        "Ce notebook mesure le temps de calcul dans deux algorithmes pour r\u00e9soudre une r\u00e9gression lin\u00e9aire, le premier inverse un matrice, le second le fait sans inverser une matrice, le troisi\u00e8me reprend l'id\u00e9e du second mais utilise une d\u00e9composition [QR](https://fr.wikipedia.org/wiki/D%C3%A9composition_QR) puis inverse la matrice *R*."
+        "Ce notebook mesure le temps de calcul dans deux algorithmes pour résoudre une régression linéaire, le premier inverse un matrice, le second le fait sans inverser une matrice, le troisième reprend l'idée du second mais utilise une décomposition [QR](https://fr.wikipedia.org/wiki/D%C3%A9composition_QR) puis inverse la matrice *R*."
       ]
     },
     {
@@ -80,7 +80,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "38.4 \u00b5s \u00b1 2.07 \u00b5s per loop (mean \u00b1 std. dev. of 7 runs, 10000 loops each)\n"
+            "38.4 µs ± 2.07 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
           ]
         }
       ],
@@ -97,7 +97,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "310 \u00b5s \u00b1 13.6 \u00b5s per loop (mean \u00b1 std. dev. of 7 runs, 1000 loops each)\n"
+            "310 µs ± 13.6 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
           ]
         }
       ],
@@ -114,7 +114,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "139 \u00b5s \u00b1 8.29 \u00b5s per loop (mean \u00b1 std. dev. of 7 runs, 10000 loops each)\n"
+            "139 µs ± 8.29 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
           ]
         }
       ],
@@ -131,7 +131,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "210 \u00b5s \u00b1 5.91 \u00b5s per loop (mean \u00b1 std. dev. of 7 runs, 1000 loops each)\n"
+            "210 µs ± 5.91 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
           ]
         }
       ],
@@ -156,7 +156,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "443 \u00b5s \u00b1 48.3 \u00b5s per loop (mean \u00b1 std. dev. of 7 runs, 1000 loops each)\n"
+            "443 µs ± 48.3 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
           ]
         }
       ],
@@ -183,7 +183,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "75.5 \u00b5s \u00b1 2.57 \u00b5s per loop (mean \u00b1 std. dev. of 7 runs, 10000 loops each)\n"
+            "75.5 µs ± 2.57 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
           ]
         }
       ],
@@ -197,7 +197,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Il serait sans doute possible d'optimiser les calculs en r\u00e9duisant le nombre de copie et de transpos\u00e9es. La version utilisant une d\u00e9composition [QR](https://fr.wikipedia.org/wiki/D%C3%A9composition_QR) est assez rapide. Le code est l\u00e0 [matrices.py](https://github.com/sdpython/mlstatpy/blob/master/src/mlstatpy/ml/matrices.py). Pour d\u00e9passer [numpy](https://www.numpy.org/), il faut passer au C++. *scikit-learn* ajoute des \u00e9tapes interm\u00e9diaires pour v\u00e9rifier les donn\u00e9es ce qui explique la longueur. On r\u00e9sume le tout par un graphique."
+        "Il serait sans doute possible d'optimiser les calculs en réduisant le nombre de copie et de transposées. La version utilisant une décomposition [QR](https://fr.wikipedia.org/wiki/D%C3%A9composition_QR) est assez rapide. Le code est là [matrices.py](https://github.com/sdpython/mlstatpy/blob/main/mlstatpy/ml/matrices.py). Pour dépasser [numpy](https://www.numpy.org/), il faut passer au C++. *scikit-learn* ajoute des étapes intermédiaires pour vérifier les données ce qui explique la longueur. On résume le tout par un graphique."
       ]
     },
     {
@@ -590,8 +590,8 @@
         "fig, ax = plt.subplots(1, 2, figsize=(14, 4))\n",
         "piv[:6].plot(kind=\"bar\", ax=ax[0])\n",
         "piv[6:].plot(kind=\"bar\", ax=ax[1])\n",
-        "ax[0].set_title(\"R\u00e9gression Lin\u00e9aire, size < 10000\")\n",
-        "ax[1].set_title(\"R\u00e9gression Lin\u00e9aire, size >= 10000\");"
+        "ax[0].set_title(\"Régression Linéaire, size < 10000\")\n",
+        "ax[1].set_title(\"Régression Linéaire, size >= 10000\");"
       ]
     },
     {
@@ -600,7 +600,7 @@
       "source": [
         "## Streaming versions\n",
         "\n",
-        "L'id\u00e9e est diff\u00e9rente ici puisqu'il s'agit de calculer toutes les r\u00e9gressions lin\u00e9aires interm\u00e9diaires. Les algorithmes sont d\u00e9crits par l'expos\u00e9 [R\u00e9gression lin\u00e9aire par morceaux](find://l-reglin-piecewise-streaming)."
+        "L'idée est différente ici puisqu'il s'agit de calculer toutes les régressions linéaires intermédiaires. Les algorithmes sont décrits par l'exposé [Régression linéaire par morceaux](find://l-reglin-piecewise-streaming)."
       ]
     },
     {
@@ -941,15 +941,15 @@
         "fig, ax = plt.subplots(1, 2, figsize=(14, 4))\n",
         "piv[[\"lr_matrix\", \"lr_st_mat\"]].plot(ax=ax[0])\n",
         "piv.plot(ax=ax[1])\n",
-        "ax[0].set_title(\"R\u00e9gression Lin\u00e9aire streaming (all)\\n10 features\")\n",
-        "ax[1].set_title(\"R\u00e9gression Lin\u00e9aire no Gram-Schmidt\\n10 features\");"
+        "ax[0].set_title(\"Régression Linéaire streaming (all)\\n10 features\")\n",
+        "ax[1].set_title(\"Régression Linéaire no Gram-Schmidt\\n10 features\");"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "La version streaming devient plus int\u00e9ressante \u00e0 partir de 1000 observations, le co\u00fbt en lin\u00e9aire en *N* contrairement \u00e0 la version classique qui est en $N^2$. La version Gram-Schmidt devrait \u00eatre r\u00e9\u00e9crite en C++ pour proposer des temps comparables."
+        "La version streaming devient plus intéressante à partir de 1000 observations, le coût en linéaire en *N* contrairement à la version classique qui est en $N^2$. La version Gram-Schmidt devrait être réécrite en C++ pour proposer des temps comparables."
       ]
     },
     {
