--- a/_doc/notebooks/metric/roc_example.ipynb
+++ b/_doc/notebooks/metric/roc_example.ipynb
@@ -539,7 +539,7 @@
       "source": [
         "## ROC - TPR / FPR\n",
         "\n",
-        "We do the same with the class this module provides [ROC](https://sdpython.github.io/doc/mlstatpy/ml/roc.html?highlight=roc#module-mlstatpy.ml.roc).\n",
+        "We do the same with the class this module provides [ROC](https://sdpython.github.io/doc/mlstatpy/c_metric/roc.html).\n",
         "\n",
         "* TPR = True Positive Rate\n",
         "* FPR = False Positive Rate\n",
