--- a/_doc/notebooks/dsgarden/quantization_f8.ipynb
+++ b/_doc/notebooks/dsgarden/quantization_f8.ipynb
@@ -45,7 +45,7 @@
     "if not os.path.exists(destination) or os.stat(destination).st_size < 10000:\n",
     "    print(f\"download {destination!r}\")\n",
     "    g = urllib.request.urlopen(url)\n",
-    "    with open(destination, 'wb') as f:\n",
+    "    with open(destination, \"wb\") as f:\n",
     "        f.write(g.read())\n",
     "    print(\"done\")\n",
     "else:\n",
@@ -169,7 +169,9 @@
     "\n",
     "fig, axs = plt.subplots(1, 2, figsize=(10, 4))\n",
     "axs[0].hist(cf, bins=2048)\n",
-    "axs[0].set_title(f\"Distribution des coefficients\\nd'une matrice de coefficients\\n{cf.size} éléments\")\n",
+    "axs[0].set_title(\n",
+    "    f\"Distribution des coefficients\\nd'une matrice de coefficients\\n{cf.size} éléments\"\n",
+    ")\n",
     "axs[1].hist(cf01, bins=2048)\n",
     "axs[1].set_title(f\"Même distribution entre 0 et {cf01.max():.4f}\\n{cf01.size} éléments\");"
    ]
@@ -229,20 +231,20 @@
     "p = 3\n",
     "gauss = numpy.random.normal(size=len(no_nan8) * 20)\n",
     "scale1 = numpy.std(no_nan8) / numpy.std(gauss)\n",
-    "scalep = numpy.std(no_nan8) / numpy.std(gauss ** p)\n",
+    "scalep = numpy.std(no_nan8) / numpy.std(gauss**p)\n",
     "\n",
     "\n",
     "fig, axs = plt.subplots(1, 2, figsize=(10, 4))\n",
     "axs[0].hist(float8, bins=50, alpha=0.5, label=\"f8\", density=True)\n",
     "axs[0].hist(gauss * scale1, bins=50, alpha=0.5, label=\"N\", density=True)\n",
-    "axs[0].hist(gauss ** p * scalep, bins=50, alpha=0.5, label=f\"N^{p}\", density=True)\n",
+    "axs[0].hist(gauss**p * scalep, bins=50, alpha=0.5, label=f\"N^{p}\", density=True)\n",
     "axs[0].set_xlim([-200, 200])\n",
     "axs[0].set_title(\"Distribution des float 8\")\n",
     "axs[0].legend()\n",
     "\n",
     "axs[1].hist(float8, bins=2000, alpha=0.5, label=\"f8\", density=True)\n",
     "axs[1].hist(gauss * scale1, bins=2000, alpha=0.5, label=\"N\", density=True)\n",
-    "axs[1].hist(gauss ** p * scalep, bins=2000, alpha=0.5, label=f\"N^{p}\", density=True)\n",
+    "axs[1].hist(gauss**p * scalep, bins=2000, alpha=0.5, label=f\"N^{p}\", density=True)\n",
     "axs[1].set_xlim([-50, 50])\n",
     "axs[1].set_title(\"Même distribution avec plus de bins\")\n",
     "axs[1].legend();"
@@ -286,10 +288,9 @@
    "source": [
     "from onnx import TensorProto\n",
     "\n",
+    "\n",
     "def estimation_quantization_scale(\n",
-    "    coef: numpy.array, \n",
-    "    to: int = TensorProto.FLOAT8E4M3FN,\n",
-    "    method: str = \"naive\"\n",
+    "    coef: numpy.array, to: int = TensorProto.FLOAT8E4M3FN, method: str = \"naive\"\n",
     ") -> tuple[float, float]:\n",
     "    \"\"\"\n",
     "    Estimates the scale parameter for the quantization to float 8 assuming\n",
@@ -304,7 +305,7 @@
     "        elif method == \"power\":\n",
     "            cr = coef.ravel()\n",
     "            ca = numpy.abs(cr)\n",
-    "            std_coef = numpy.std(ca ** (1./3.) * cr / ca)\n",
+    "            std_coef = numpy.std(ca ** (1.0 / 3.0) * cr / ca)\n",
     "            std_quant = numpy.std(numpy.array(quant_float, dtype=numpy.float32))\n",
     "        else:\n",
     "            raise ValueError(f\"Unexpected quantization method {method!r}.\")\n",
@@ -312,13 +313,13 @@
     "        scale = std_quant / std_coef\n",
     "    elif to == TensorProto.UINT8:\n",
     "        uint8 = [i for i in range(0, 256)]\n",
-    "        qu = numpy.quantile(coef.ravel(), [0.025, 1-0.025])\n",
+    "        qu = numpy.quantile(coef.ravel(), [0.025, 1 - 0.025])\n",
     "        scale = 255 / (qu[1] - qu[0])\n",
     "        zero = qu[0] * scale\n",
     "    else:\n",
     "        raise ValueError(f\"Unexpected quantization type for to={to}.\")\n",
-    "    \n",
-    "    return 1. / scale, - zero\n",
+    "\n",
+    "    return 1.0 / scale, -zero\n",
     "\n",
     "\n",
     "scale_f8, zero_f8 = estimation_quantization_scale(coef)\n",
@@ -402,13 +403,21 @@
     "axs[0].set_xlim([-200, 200])\n",
     "axs[0].set_title(f\"Distribution des coefficients à l'échelle\\nfloat 8\")\n",
     "\n",
-    "axs[1].hist(coef.ravel() / scale_f8p, bins=512, density=True, label=\"coef_f8\", alpha=0.5)\n",
+    "axs[1].hist(\n",
+    "    coef.ravel() / scale_f8p, bins=512, density=True, label=\"coef_f8\", alpha=0.5\n",
+    ")\n",
     "axs[1].hist(no_nan8, bins=512, alpha=0.5, label=\"f8\", density=True)\n",
     "axs[1].legend()\n",
     "axs[1].set_xlim([-200, 200])\n",
     "axs[1].set_title(f\"Distribution des coefficients à l'échelle\\nfloat 8 method='power'\")\n",
     "\n",
-    "axs[2].hist(coef.ravel() / scale_u8 + zero_u8, bins=512, density=True, label=\"coef_u8\", alpha=0.5)\n",
+    "axs[2].hist(\n",
+    "    coef.ravel() / scale_u8 + zero_u8,\n",
+    "    bins=512,\n",
+    "    density=True,\n",
+    "    label=\"coef_u8\",\n",
+    "    alpha=0.5,\n",
+    ")\n",
     "axs[2].hist(list(range(256)), bins=100, alpha=0.5, label=\"u8\", density=True)\n",
     "axs[2].legend()\n",
     "axs[2].set_title(f\"Distribution des coefficients à l'échelle\\nuint 8\");"
@@ -453,7 +462,14 @@
     }
    ],
    "source": [
-    "from onnx.helper import make_node, make_graph, make_model, make_tensor_value_info, make_operatorsetid, make_tensor\n",
+    "from onnx.helper import (\n",
+    "    make_node,\n",
+    "    make_graph,\n",
+    "    make_model,\n",
+    "    make_tensor_value_info,\n",
+    "    make_operatorsetid,\n",
+    "    make_tensor,\n",
+    ")\n",
     "from onnx.reference import ReferenceEvaluator\n",
     "\n",
     "X = make_tensor_value_info(\"X\", TensorProto.FLOAT, [None])\n",
@@ -462,17 +478,27 @@
     "\n",
     "model_f8 = make_model(\n",
     "    make_graph(\n",
-    "        [make_node(\"Constant\", [], [\"Zero\"],\n",
-    "                   value=make_tensor(\"Zero\", TensorProto.FLOAT8E4M3FN, [1], [0.0])),\n",
-    "         make_node(\"QuantizeLinear\", [\"X\", \"Scale\", \"Zero\"], [\"Q\"], axis=0),\n",
-    "         make_node(\"DequantizeLinear\", [\"Q\", \"Scale\"], [\"Y\"], axis=0)],\n",
-    "        \"quf8\", [X, Scale], [Y],\n",
+    "        [\n",
+    "            make_node(\n",
+    "                \"Constant\",\n",
+    "                [],\n",
+    "                [\"Zero\"],\n",
+    "                value=make_tensor(\"Zero\", TensorProto.FLOAT8E4M3FN, [1], [0.0]),\n",
+    "            ),\n",
+    "            make_node(\"QuantizeLinear\", [\"X\", \"Scale\", \"Zero\"], [\"Q\"], axis=0),\n",
+    "            make_node(\"DequantizeLinear\", [\"Q\", \"Scale\"], [\"Y\"], axis=0),\n",
+    "        ],\n",
+    "        \"quf8\",\n",
+    "        [X, Scale],\n",
+    "        [Y],\n",
     "    ),\n",
-    "    opset_imports=[make_operatorsetid(\"\", 19)]\n",
+    "    opset_imports=[make_operatorsetid(\"\", 19)],\n",
     ")\n",
     "\n",
     "ref_f8 = ReferenceEvaluator(model_f8)\n",
-    "qu_f8 = ref_f8.run(None, {'X': coef.ravel(), 'Scale': numpy.array([scale_f8], dtype=numpy.float32)})[0]\n",
+    "qu_f8 = ref_f8.run(\n",
+    "    None, {\"X\": coef.ravel(), \"Scale\": numpy.array([scale_f8], dtype=numpy.float32)}\n",
+    ")[0]\n",
     "qu_f8"
    ]
   },
@@ -495,7 +521,9 @@
     }
    ],
    "source": [
-    "qu_f8p = ref_f8.run(None, {'X': coef.ravel(), 'Scale': numpy.array([scale_f8p], dtype=numpy.float32)})[0]\n",
+    "qu_f8p = ref_f8.run(\n",
+    "    None, {\"X\": coef.ravel(), \"Scale\": numpy.array([scale_f8p], dtype=numpy.float32)}\n",
+    ")[0]\n",
     "qu_f8p"
    ]
   },
@@ -520,17 +548,27 @@
    "source": [
     "model_u8 = make_model(\n",
     "    make_graph(\n",
-    "        [make_node(\"Constant\", [], [\"Zero\"],\n",
-    "                   value=make_tensor(\"Zero\", TensorProto.UINT8, [1], [int(zero_u8)])),\n",
-    "         make_node(\"QuantizeLinear\", [\"X\", \"Scale\", \"Zero\"], [\"Q\"], axis=0),\n",
-    "         make_node(\"DequantizeLinear\", [\"Q\", \"Scale\", \"Zero\"], [\"Y\"], axis=0)],\n",
-    "        \"quu8\", [X, Scale], [Y],\n",
+    "        [\n",
+    "            make_node(\n",
+    "                \"Constant\",\n",
+    "                [],\n",
+    "                [\"Zero\"],\n",
+    "                value=make_tensor(\"Zero\", TensorProto.UINT8, [1], [int(zero_u8)]),\n",
+    "            ),\n",
+    "            make_node(\"QuantizeLinear\", [\"X\", \"Scale\", \"Zero\"], [\"Q\"], axis=0),\n",
+    "            make_node(\"DequantizeLinear\", [\"Q\", \"Scale\", \"Zero\"], [\"Y\"], axis=0),\n",
+    "        ],\n",
+    "        \"quu8\",\n",
+    "        [X, Scale],\n",
+    "        [Y],\n",
     "    ),\n",
-    "    opset_imports=[make_operatorsetid(\"\", 19)]\n",
+    "    opset_imports=[make_operatorsetid(\"\", 19)],\n",
     ")\n",
     "\n",
     "ref_u8 = ReferenceEvaluator(model_u8)\n",
-    "qu_u8 = ref_u8.run(None, {'X': coef.ravel(), 'Scale': numpy.array([scale_u8], dtype=numpy.float32)})[0]\n",
+    "qu_u8 = ref_u8.run(\n",
+    "    None, {\"X\": coef.ravel(), \"Scale\": numpy.array([scale_u8], dtype=numpy.float32)}\n",
+    ")[0]\n",
     "qu_u8"
    ]
   },
