--- a/_doc/notebooks/dsgarden/quantization_f8.ipynb
+++ b/_doc/notebooks/dsgarden/quantization_f8.ipynb
@@ -290,7 +290,10 @@
     "\n",
     "\n",
     "def estimation_quantization_scale(\n",
-    "    coef: numpy.array, to: int = TensorProto.FLOAT8E4M3FN, method: str = \"naive\", threshold: float= 0.99999,\n",
+    "    coef: numpy.array,\n",
+    "    to: int = TensorProto.FLOAT8E4M3FN,\n",
+    "    method: str = \"naive\",\n",
+    "    threshold: float = 0.99999,\n",
     ") -> tuple[float, float]:\n",
     "    \"\"\"\n",
     "    Estimates the scale parameter for the quantization to float 8 assuming\n",
@@ -313,7 +316,7 @@
     "        scale = std_quant / std_coef\n",
     "    elif to == TensorProto.UINT8:\n",
     "        uint8 = [i for i in range(0, 256)]\n",
-    "        qu = numpy.quantile(coef.ravel(), [1-threshold, threshold])\n",
+    "        qu = numpy.quantile(coef.ravel(), [1 - threshold, threshold])\n",
     "        scale = 255 / (qu[1] - qu[0])\n",
     "        zero = qu[0] * scale\n",
     "    else:\n",
@@ -624,20 +627,20 @@
    "source": [
     "fig, axs = plt.subplots(2, 3, figsize=(12, 6))\n",
     "for i, bins in [(0, 64), (1, 512)]:\n",
-    "    axs[i,0].hist(coef.ravel(), bins=bins, density=True, label=\"coef\", alpha=0.5)\n",
-    "    axs[i,0].hist(qu_f8, bins=bins, alpha=0.5, label=\"qdq_f8\", density=True)\n",
-    "    axs[i,0].legend()\n",
-    "    axs[i,0].set_title(f\"QDQ float 8\\nerr={err_f8:1.3g}\")\n",
+    "    axs[i, 0].hist(coef.ravel(), bins=bins, density=True, label=\"coef\", alpha=0.5)\n",
+    "    axs[i, 0].hist(qu_f8, bins=bins, alpha=0.5, label=\"qdq_f8\", density=True)\n",
+    "    axs[i, 0].legend()\n",
+    "    axs[i, 0].set_title(f\"QDQ float 8\\nerr={err_f8:1.3g}\")\n",
     "\n",
-    "    axs[i,1].hist(coef.ravel(), bins=bins, density=True, label=\"coef\", alpha=0.5)\n",
-    "    axs[i,1].hist(qu_f8p, bins=bins, alpha=0.5, label=\"qdq_f8\", density=True)\n",
-    "    axs[i,1].legend()\n",
-    "    axs[i,1].set_title(f\"QDQ float 8 (power)\\nerr={err_f8p:1.3g}\")\n",
+    "    axs[i, 1].hist(coef.ravel(), bins=bins, density=True, label=\"coef\", alpha=0.5)\n",
+    "    axs[i, 1].hist(qu_f8p, bins=bins, alpha=0.5, label=\"qdq_f8\", density=True)\n",
+    "    axs[i, 1].legend()\n",
+    "    axs[i, 1].set_title(f\"QDQ float 8 (power)\\nerr={err_f8p:1.3g}\")\n",
     "\n",
-    "    axs[i,2].hist(coef.ravel(), bins=bins, density=True, label=\"coef\", alpha=0.5)\n",
-    "    axs[i,2].hist(qu_u8, bins=bins, alpha=0.5, label=\"qdq_u8\", density=True)\n",
-    "    axs[i,2].legend()\n",
-    "    axs[i,2].set_title(f\"QDQ uint 8\\nerr={err_u8:1.3g}\");"
+    "    axs[i, 2].hist(coef.ravel(), bins=bins, density=True, label=\"coef\", alpha=0.5)\n",
+    "    axs[i, 2].hist(qu_u8, bins=bins, alpha=0.5, label=\"qdq_u8\", density=True)\n",
+    "    axs[i, 2].legend()\n",
+    "    axs[i, 2].set_title(f\"QDQ uint 8\\nerr={err_u8:1.3g}\");"
    ]
   },
   {
@@ -757,7 +760,7 @@
     "    err = ((coef.ravel() - got) ** 2).sum() ** 0.5\n",
     "    obs = dict(scale=scale, err=err, scale_f8p=scale_f8p, scale_f8=scale_f8)\n",
     "    data.append(obs)\n",
-    "    \n",
+    "\n",
     "df = DataFrame(data)\n",
     "df"
    ]
